add sdl3_image library

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,19 @@
+function(add_sdl name)
+	add_subdirectory(SDL${name})
+	target_include_directories(snake PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SDL${name}/include/SDL3${name})
+	target_include_directories(snake PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SDL${name}/include/)
+	target_link_directories(snake PRIVATE ${CMAKE_CURRENT_BINARY_DIR}/SDL${name}/src)
 
+endfunction()
 
 project(snake-game)
 
 file(GLOB src "*.cpp")
 
-#add sdl3
-add_subdirectory(SDL)
-
 add_executable(snake ${src})
-add_target_include_directoties(snake PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SDL/include/SDL3)
-add_target_include_directoties(snake PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/SDL/include/)
+
+#add sdl libraries
+add_sdl()
+add_sdl(_image)
+add_sdl(_mixer)
+target_link_libraries(snake PRIVATE SDL3 SDL3_image SDL3_mixer)
