add sdl_ttf in cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ add_executable(snake ${src})
 add_sdl()
 add_sdl(_image)
 add_sdl(_mixer)
-target_link_libraries(snake PRIVATE SDL3 SDL3_image SDL3_mixer)
+add_sdl(_ttf)
+target_link_libraries(snake PRIVATE SDL3 SDL3_image SDL3_mixer SD3_ttf)
